--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	border: 2px solid white;
 	background: none;
 	color: white;
+	width: fit-content;
 	transition: 0.5s;
 }
 
@@ -79,13 +80,15 @@
 	display: flex;
 }
 
-.desc-w-btns {
+.about-desc {
 	padding: 10px;
 	padding-left: 5%;
-	text-align: left;
+	text-align: center;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
+	align-items: center;
+	width: 500px;
 }
 
 .heading {
@@ -101,17 +104,24 @@
 
 .contact {
 	color: white;
-	margin-bottom: 40px;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 40px;
 }
 
 img {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	height: 200px;
+	width: 300px;
 }
 
-.about {
-	color: white;
-	margin-bottom: 40px;
+.about-img {
+	height: 200px;
+	width: 200px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 .projects {
@@ -122,27 +132,29 @@ img {
 	margin: 10px;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	justify-content: center;
+	font-size: large;
 }
 
 .project {
-	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	
 	justify-content: center;
+}
+
+.project img {
 	margin-bottom: 40px;
 }
 
 .proj-desc {
-	padding-right: 40px;
-	text-align: left;
+	text-align: center;
+	align-items: center;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	align-items: baseline;
-	width: 300px;
+	width: 400px;
 	margin-top: 0px;
+	margin-bottom: 40px;
 }
 
 .proj-desc h2 {
@@ -152,6 +164,88 @@ img {
 .proj-desc button {
 	width: fit-content;
 	margin-right: 10px;
+}
+
+@media only screen and (min-width: 400px) {
+	.about-img {
+		width: 300px;
+		height: 300px;
+	}
+}
+
+@media only screen and (min-width: 500px) {
+	img {
+		width: 400px;
+		height: 300px;
+	}
+}
+
+@media only screen and (min-width: 700px) {
+	.proj-desc {
+		width: 500px;
+	}
+	img {
+		width: 500px;
+		height: 350px;
+	}
+}
+
+@media only screen and (min-width: 800px) {
+	
+	.proj-desc {
+		text-align: left;
+		align-items: flex-start;
+		width: 600px;
+	}
+	img {
+		width: 600px;
+		height: 400px;
+	}
+}
+
+@media only screen and (min-width: 805px) {
+	.about-desc {
+		text-align: left;
+		align-items: flex-start;
+		width: 400px;
+	}
+}
+
+@media only screen and (min-width: 900px) {
+	img {
+		width: 700px;
+		height: 450px;
+	}
+}
+
+@media screen and (min-width: 1100px) {
+	
+	.proj-desc {
+		width: 400px;
+		margin-right: 40px;
+	}
+	img {
+		width: 600px;
+		height: 400px;
+	}
+}
+
+@media only screen and (min-width: 1250px) {
+	img {
+		width: 750px;
+		height: 500px;
+	}
+}
+
+@media only screen and (min-width: 1400px) {
+	.proj-desc {
+		width: 500px;
+	}
+}
+
+.about {
+	color: white;
+	margin-bottom: 40px;
 }
 
 footer {
@@ -176,11 +270,15 @@ footer button:hover {
 }
 
 hr {
-	width: 80%;
+	width: 70%;
 	border-radius: 5px;
 	border: 1px solid rgb(129, 129, 129);
 	margin: 0;
 	margin-top: 20px;
+}
+
+footer {
+	text-align: center;
 }
 
 footer p {
@@ -195,9 +293,16 @@ footer a:hover {
 	color: rgb(201, 201, 201);
 }
 
+button {
+	font-size: large;
+}
+
 body {
 	margin: 0;
 	background-image: linear-gradient(to right, rgb(50, 187, 103), rgb(49, 122, 201));
-	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+html {
+	scroll-behavior: smooth;
+}
