--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ img {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	font-size: small;
+	font-size: medium;
 }
 
 .project {
@@ -320,7 +320,7 @@ button {
 body {
 	margin: 0;
 	background-image: linear-gradient(to right, rgb(50, 187, 103), rgb(49, 122, 201));
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-family: 'Montserrat', 'sans-serif'
 }
 
 html {
