--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ button {
 body {
 	margin: 0;
 	background-image: linear-gradient(to right, rgb(50, 187, 103), rgb(49, 122, 201));
-	font-family: 'Montserrat', sans-serif
+	font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
 html {
